--- a/src/public/css/item_detail.css
+++ b/src/public/css/item_detail.css
@@ -10,8 +10,7 @@
 }
 
 .detail_image_img {
-    width: 200px;
-    height: 300px;
+    width: 300px;
     background-color: #d3d3d3;
     margin-left: 30%;
 }
@@ -35,26 +34,32 @@
     cursor: pointer;
 }
 
-.item_comment {
-    color: #000;
-    margin-left: 20px;
+.icon {
+    display: flex;
+
 }
 
-.icon_count {
-    display: flex;
-    margin-bottom: 20px;
+.comment {
+    margin-left: 30px;
 }
 
 .icon_count-favorite {
-    margin-top: 0;
+    text-align: center;
     font-size: 10px;
-    margin-left: 9px;
+    margin-top: 0;
+    margin-bottom: 30px;
 }
 
 .icon_count-comment {
-    margin-top: 0;
+    text-align: center;
     font-size: 10px;
-    margin-left: 34px;
+    margin-top: 0;
+    margin-bottom: 30px;
+    color: #000;
+}
+
+.item_comment {
+    color: #000;
 }
 
 .item_purchase {
