--- a/src/public/css/purchase_list.css
+++ b/src/public/css/purchase_list.css
@@ -44,6 +44,7 @@
     margin-top: 30px;
     text-decoration: none;
     font-weight: bold;
+    color: #000;
 }
 
 .purchase_list {
@@ -51,15 +52,16 @@
     margin-top: 30px;
     margin-left: 40px;
     text-decoration: none;
-    color: #000;
     font-weight: bold;
 }
 
 .purchse_list__content {
-    width: 100px;
-    height: 110px;
-    background-color: #d3d3d3;
-    display: inline-block;
+    margin: 25px;
+}
+
+.purchse_list__img {
+    width: 150px;
+    height: 180px;
     flex-wrap: wrap;
     margin: 25px;
 }
