レシポンシブデザイン追加

--- a/src/public/css/mylist.css
+++ b/src/public/css/mylist.css
@@ -33,3 +33,12 @@
     width: 150px;
     height: 180px;
 }
+
+@media screen and (max-width: 767px) {
+
+.top_page__content {
+    display: inline-block;
+    flex-wrap: wrap;
+    margin: 15px;
+}
+}
