--- a/src/public/css/top_page.css
+++ b/src/public/css/top_page.css
@@ -37,3 +37,12 @@
 .message {
     color: red;
 }
+
+@media screen and (max-width: 767px) {
+
+.top_page__content {
+    display: inline-block;
+    flex-wrap: wrap;
+    margin: 15px;
+}
+}
