--- a/src/public/css/item_detail.css
+++ b/src/public/css/item_detail.css
@@ -36,7 +36,6 @@
 
 .icon {
     display: flex;
-
 }
 
 .comment {
@@ -76,7 +75,6 @@
 
 .item_detail_information {
     display: flex;
-    
 }
 
 .category {
@@ -98,4 +96,57 @@
     font-size: 12px;
     margin-top: 0;
     margin-left:40px;
+}
+
+@media screen and (max-width: 767px) {
+
+.detail {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    margin-top: 50px;
+    text-align: center;
+}
+
+.detail_image_img {
+    width: 300px;
+    background-color: #d3d3d3;
+    margin: 0;
+}
+
+.detail_image {
+    width: 100%;
+}
+
+.item_detail {
+    width: 100%;
+}
+
+.icon {
+    display: flex;
+    text-align: center;
+    margin: 0 auto;
+    width: 100px;
+}
+
+.item_detail_information {
+    display: block;
+}
+
+.category_detail {
+    font-size: 12px;
+    background-color: #d3d3d3;
+    margin-bottom: 20px;
+    padding: 0 ;
+    border-radius: 20px;
+    margin-left: 0px;
+    width: 60px;
+    display: inline-block;
+}
+
+.category_situation {
+    font-size: 12px;
+    margin-top: 0;
+    margin-left: 0;
+}
 }
