--- a/src/public/css/layouts.css
+++ b/src/public/css/layouts.css
@@ -37,8 +37,6 @@
     border: #fff;
 }
 
-
-
 .seach_nav {
     display: flex;
 }
@@ -64,4 +62,38 @@
     background-color: #fff;
     padding: 10px 15px;
     border-radius: 3px;
+}
+
+@media screen and (max-width: 767px){
+
+.header {
+    background-color: black;
+    padding: 15px;
+}
+
+.seach {
+    display: block;
+    margin: 10px;
+}
+
+.seach_input {
+    width: 250px;
+    height: 30px;
+    padding: 0 20px;
+    border: #fff;
+    border-radius: 3px;
+}
+
+.seach_content {
+    background-color: #fff;
+    margin-left: 0;
+    border-radius: 3px;
+    height: 30px;
+    margin-top: 10px;
+}
+
+.seach_nav {
+    display: flex;
+    margin-top: 10px;
+}
 }
