--- a/src/public/css/sell.css
+++ b/src/public/css/sell.css
@@ -70,10 +70,6 @@
     height: 80px;
 }
 
-
-
-
-
 .sell__btn {
     width: 40%;
     margin: 0 auto;
@@ -91,4 +87,14 @@
 
 .form__error {
     color: red;
+}
+
+@media screen and (max-width: 767px) {
+
+.sell_image {
+    border: 1px solid #000;
+    text-align: center;
+    padding: 20px 5px;
+    border-radius: 3px;
+}
 }
