--- a/src/public/css/notification_form.css
+++ b/src/public/css/notification_form.css
@@ -31,6 +31,12 @@
     margin-left: 40px;
 }
 
+.list_category {
+    color: #000;
+    text-decoration: none;
+    margin-left: 40px;
+}
+
 .user_list_table {
     margin: 0 auto;
     text-align: center;
