--- a/src/public/css/notification_form.css
+++ b/src/public/css/notification_form.css
@@ -64,3 +64,24 @@
     padding: 5px 10px;
     cursor: pointer
 }
+
+@media screen and (max-width: 767px){
+
+.list {
+    text-align: left;
+    margin-left: 3%;
+    font-weight: bold;
+}
+
+.list_delete {
+    color: #000;
+    text-decoration: none;
+    margin-left: 5px;
+}
+
+.list_category {
+    color: #000;
+    text-decoration: none;
+    margin-left: 5px;
+}
+}
